# agentforge

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  SUBMODULE_WORKFLOW.md  agentforge.md  docker-entrypoint.sh  package-lock.json  package.json
ai-agent/: .coverage  .gitignore  README.md  pyproject.toml
ai-agent/ai_agent/: agent.py  config.py  openemr_client.py  server.py
ai-agent/ai_agent/config_data/: __init__.py  claim_rules.yaml  loader.py  prompts.yaml  verification_rules.yaml
ai-agent/ai_agent/tools/: _logging.py  draft_encounter_note.py  find_appointments.py  (+3 more)
ai-agent/contracts/: engineering_contract.json
ai-agent/docs/: deployment.md  integration-tests.md  manual-test-prompts.md  testing-best-practices.md
ai-agent/evals/: cases_phase1.yaml  cases_phase2.yaml  cases_phase3.yaml  cases_phase4_5.yaml  eval_cases.yaml  eval_graph.py  evaluators.py  run_evals.py
ai-agent/scripts/: seed_data.py  setup_oauth.py  validate_engineering_contract.py
ai-agent/tests/: conftest.py  helpers.py  test_agent.py  test_config.py  test_draft_encounter_note.py  test_draft_encounter_note_integration.py  test_engineering_contract.py  test_eval_graph.py  test_find_appointments.py  test_find_appointments_integration.py  test_get_encounter_context.py  test_get_encounter_context_integration.py  test_get_patient_summary.py  test_get_patient_summary_integration.py  test_logging.py  test_openemr_client.py  test_server.py  test_tool_output_schemas.py  test_validate_claim_completeness.py  test_validate_claim_integration.py  test_verification.py
(+140 files in other folders)
